--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "clientId": "703342923382521888",
-  "token": "NzAzMzQyOTIzMzgyNTIxODg4.XqNNJA.tiyGji1Wwj9nkm_TOMH6t_Gt0Fk",
+  "token": "",
 
   "parentOpened": "960985969220288633",
   "Category1": "Contact Marketing",
